<resources>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyAdewB4fv5q6rQmngsCs_mjnnvk1yGfKus</string>
    <string name="app_name">Running Tracker</string>
    <string name="running_tracker">Running\nTracker</string>
    <string name="sign_in_hyperlink"><u>Sign in</u></string>
    <string name="sign_up_hyperlink"><u>Sign up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>
    <string name="enter_your_second_name">Enter your second name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_in">Sign In</string>
    <string name="error_incorrectly_entered_data_to_register">You entered email or password incorrectly</string>
    <string name="error_occurred_on_the_server">An error occurred on the server</string>
    <string name="error_required_filed_empty">Required filed empty</string>
    <string name="error_email_already_exist">Email already exist</string>
    <string name="error_unexpected">Please try again!</string>
    <string name="error_empty_email_field">Fill in the email field</string>
    <string name="error_email_not_valid">Email field is not valid</string>
    <string name="error_name_field_empty">Fill in the name field</string>
    <string name="error_second_name_field_empty">Fill in the second name field</string>
    <string name="error_password_field_empty">Fill in the password field</string>
    <string name="error_repeat_password_not_equal">Passwords dont match</string>
    <string name="error_password_is_not_complex_enough">Password is not complex enough</string>
    <string name="main_menu">Main menu</string>
    <string name="reminder">Reminder</string>
    <string name="open_drawer_layout">Open</string>
    <string name="close_drawer_layout">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_time_of_the_run">Start time of the run:</string>
    <string name="running_distance">Running distance:</string>
    <string name="running_time">Running time:</string>
    <string name="logout">Logout</string>
    <string name="its_time_for_jogging">Its time for jogging</string>
    <string name="its_time_to_pull_yourself_together_and_run">Its time to pull yourself together and run!</string>
    <string name="reminders_from">Reminders from Running Tracker</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="adding_a_reminder">Adding a reminder</string>
    <string name="toast_missing_date">You can\'t escape to the past!!</string>
    <string name="try_delete_reminder">Try deleting the reminder again!</string>
    <string name="try_change_reminder">Try change the reminder again!</string>
    <string name="delete_reminder_question">Delete reminder?</string>
    <string name="change_reminder_question">Change reminder?</string>
    <string name="cant_change_repeating_reminder">You can\'t change repeating reminders!</string>
    <string name="check_location">Checking the location</string>
    <string name="start_running">Start Running</string>
    <string name="begin_time">00:00:00</string>
    <string name="finish">Finish</string>
    <string name="distance">Дистанция:</string>
    <string name="allow_gps">Allow GPS</string>
    <string name="gps_permission_denied">GPS permission denied</string>
    <string name="turn_the_gps">Turn on the GPS</string>
</resources>